[package]
authors = ["Gavin J Stark"]
categories = ["wasm"]
description = "A very simple canvas art program"
edition = "2021"
name = "canvas_art"
readme = "README.md"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = ">=0.2.74"

[dependencies.web-sys]
features = [
  'console',
  'CanvasRenderingContext2d',
  'Document',
  'EventTarget',
  'Element',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'Window',
]
version = ">=0.3.40"

[profile.release]
lto = true
opt-level = 3